<resources>
    <string name="app_name">MyRuns: Ayush Edition</string>
    <string name="app_bar_title">MyRuns</string>
    <string name="heading_map_display">Map</string>

    <string name="textview_profile_photo">"Profile Photo: "</string>
    <string name="textview_name">Name: </string>
    <string name="hint_name">eg. Ayush Arora</string>
    <string name="textview_email">"Email: "</string>
    <string name="hint_email">eg. ayusharora@xyz.com</string>
    <string name="textview_phone_number">"Phone Number: "</string>
    <string name="hint_phone_number">eg. 111-222-3456</string>
    <string name="textview_gender">"Gender: "</string>
    <string name="radiobutton_female">Female</string>
    <string name="radiobutton_male">Male</string>
    <string name="textview_major">"Major: "</string>
    <string name="hint_major">eg. computing science</string>
    <string name="textview_class">"Class: "</string>
    <string name="hint_class">eg. 2023</string>

    <string name="button_positive">SAVE</string>
    <string name="button_negative">CANCEL</string>
    <string name="button_profile_photo">CHANGE</string>
    <string name="button_launch">START</string>
    <string name="button_delete">DELETE</string>

    <string name="spinner_input_type">Input Type</string>
    <string name="spinner_activity_type">Activity Type</string>

    <string name="link_webpage">https://www.sfu.ca/fas/computing.html</string>
    <string name="de_textview_input">Input Type</string>
    <string name="de_textview_activity">Activity Type</string>
    <string name="de_textview_date_time">Date and Time</string>
    <string name="de_textview_duration">Duration</string>
    <string name="de_textview_distance">Distance</string>
    <string name="de_textview_calories">Calories</string>
    <string name="de_textview_heart_rate">Heart Rate</string>
    <string name="de_textview_comments">Comments</string>
    <string name="md_tv_stats_type">Activity Type:</string>
    <string name="md_tv_stats_average_speed">Average Speed:</string>
    <string name="md_tv_stats_current_speed">Current Speed:</string>
    <string name="md_tv_stats_climb">Climb:</string>
    <string name="md_tv_stats_calories">Calories:</string>
    <string name="md_tv_stats_distance">Distance:</string>
    <string name="button_delete_all">DELETE ALL ENTRIES</string>
    <string name="md_tv_stats_comments">Comments</string>
</resources>