<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/off_white"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:elevation="6dp"
        android:translationZ="6dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        tools:context=".activities.UserProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp"
                android:text="@string/textview_profile_photo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/up_image_view"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="15dp">
                </ImageView>

                <Button
                    android:id="@+id/up_button_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/button_profile_photo"
                    app:cornerRadius="0dp"
                    android:backgroundTint="@color/gray"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:elevation="6dp"
                    android:translationZ="6dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_name" />

            <EditText
                android:id="@+id/up_edittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_email" />

            <EditText
                android:id="@+id/up_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_phone_number" />

            <EditText
                android:id="@+id/up_edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_gender" />

            <RadioGroup
                android:id="@+id/up_radiogroup_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/up_radiobutton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/radiobutton_female"
                    android:layout_marginEnd="50dp"/>

                <RadioButton
                    android:id="@+id/up_radiobutton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/radiobutton_male"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_class" />

            <EditText
                android:id="@+id/up_edittext_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:hint="@string/hint_class"
                android:inputType="number"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_gender" />

            <EditText
                android:id="@+id/up_edittext_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:hint="@string/hint_major"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp"
                android:gravity="center">

                <Button
                    android:id="@+id/up_button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_positive"
                    app:cornerRadius="0dp"
                    android:backgroundTint="@color/gray"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"
                    android:elevation="6dp"
                    android:translationZ="6dp"/>
                <Button
                    android:id="@+id/up_button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_negative"
                    app:cornerRadius="0dp"
                    android:backgroundTint="@color/gray"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"
                    android:elevation="6dp"
                    android:translationZ="6dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>