<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        style="@style/Widget.MyRuns.AppBar"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/Widget.MyRuns.HeadingNoBackground"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id = "@+id/de_button_delete"
            android:text="@string/button_delete"
            android:gravity="center"
            app:cornerRadius="0dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_input"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_input"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_activity"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_activity"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_date_time"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_date_time"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_duration"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_duration"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_distance"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_distance"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_calories"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_calories"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_heart_rate"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_heart_rate"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/de_textview_comments"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/de_edittext_comments"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>