<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_map_display"
        android:layout_alignParentTop="true"
        style="@style/Widget.MyRuns.Heading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/md_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_positive"
            app:cornerRadius="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"/>

        <Button
            android:id="@+id/md_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_negative"
            app:cornerRadius="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</RelativeLayout>