<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_input_type"
            android:layout_margin="10dp"/>

        <Spinner
            android:id="@+id/start_spinner_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_activity_type"
            android:layout_margin="10dp"/>

        <Spinner
            android:id="@+id/start_spinner_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/start_button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_launch"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            app:cornerRadius="0dp"
            android:elevation="6dp"
            android:translationZ="6dp"/>


    </LinearLayout>

</ScrollView>