<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".manualinput.ManualInputActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/off_white"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:elevation="6dp"
        android:translationZ="6dp" />

    <ListView
        android:id="@+id/mi_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/mi_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_positive"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"/>

        <Button
            android:id="@+id/mi_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_negative"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

</LinearLayout>
